[package]
name = "reinhardt-apps"
version = "0.1.0-rc.23"
description = "Application registry and management for Reinhardt framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reinhardt-http = { workspace = true }
reinhardt-server = { workspace = true }

# DI integration (optional)
reinhardt-di = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
flate2 = { workspace = true }
brotli = { workspace = true }
reqwest = { workspace = true }
futures = "0.3.31"
pin-project = "1.1"
linkme = "0.3"
inventory = "0.3"
reinhardt-conf = {workspace = true, features = ["settings"]}
reinhardt-core = {workspace = true, features = ["types"]}

[features]
default = []
full = ["di"]
di = ["dep:reinhardt-di"]
testing = []

[dev-dependencies]
insta = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }
# Workaround for KI-2 (rust-lang/cargo#4242, rust-lang/cargo#15151):
# Path-only dev-dep (no version) is stripped from published manifest by cargo,
# avoiding dev-dependency version resolution failure during `cargo publish`.
# When upstream cargo resolves these issues, replace with `workspace = true`.
reinhardt-test = { path = "../reinhardt-test" }
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-core = {workspace = true, features = ["exception"]}
