[package]
name = "reinhardt-apps"
version = "0.3.0-rc.2"
description = "Application registry and management for Reinhardt framework"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Cross-target (wasm + native): pure data / trait dependencies only.
reinhardt-http = { workspace = true }
reinhardt-core = { workspace = true, default-features = false, features = ["types"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
futures = "0.3.31"
pin-project = "1.1"

# Native-only dependencies. These pull in tokio's `net` feature (mio) or other
# runtime/server machinery that does not compile on `wasm32-unknown-unknown`.
# `linkme` and `inventory` rely on link-section constructors that are not
# portable to `wasm32-unknown-unknown`, so they are gated here as well; source
# sites that use them are guarded by `#[cfg(native)]`.
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
linkme = "0.3"
inventory = "0.3"
reinhardt-server = { workspace = true }
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-utils = { workspace = true }
reinhardt-di = { workspace = true, optional = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
full = ["di"]
di = ["dep:reinhardt-di"]
testing = []

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
insta = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }
# Workaround for KI-2 (rust-lang/cargo#4242, rust-lang/cargo#15151):
# Path-only dev-dep (no version) is stripped from published manifest by cargo,
# avoiding dev-dependency version resolution failure during `cargo publish`.
# When upstream cargo resolves these issues, replace with `workspace = true`.
reinhardt-test = { path = "../reinhardt-test" }
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-core = { workspace = true, features = ["exception"] }
