[package]
name = "reinhardt-auth"
version.workspace = true
description = "Authentication and authorization system"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Fine-grained authentication features
jwt = []
sessions = []
oauth = []
token = []
argon2-hasher = []

# Database and session storage
database = ["sqlx", "sea-query"]
redis-sessions = ["redis"]

# Aggregate all auth features
auth-full = [
  "jwt",
  "sessions",
  "oauth",
  "token",
  "argon2-hasher",
  "database",
  "redis-sessions",
  "reinhardt-sessions/full",
]

[dependencies]
reinhardt-sessions = { workspace = true }
reinhardt-db = { workspace = true, features = ["orm"] }
reinhardt-throttling = { workspace = true }
reinhardt-types = { workspace = true, features = ["http"] }
reinhardt-exception = { workspace = true }
reinhardt-http = { workspace = true }
hyper = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
unicode-normalization = "0.1"
reqwest = { version = "0.12", features = ["json"] }
totp-lite = "2.0"
data-encoding = "2.6"
sqlx = { workspace = true, optional = true }
sea-query = { version = "1.0.0-rc.22", features = [
  "backend-postgres",
  "backend-mysql",
  "backend-sqlite",
  "sqlx-utils",
], optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
