[package]
name = "reinhardt-auth"
version.workspace = true
description = "Authentication and authorization system"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["params"]

# Parameter extraction support for CurrentUser DI
params = ["reinhardt-di/params"]

# Fine-grained authentication features
jwt = []
sessions = []
oauth = []
token = []
argon2-hasher = []

# Database and session storage (ORM model support)
database = ["sqlx", "sea-query", "reinhardt-orm", "reinhardt-migrations", "reinhardt-apps", "ctor"]
redis-sessions = ["redis"]

# Aggregate all auth features
auth-full = [
  "params",
  "jwt",
  "sessions",
  "oauth",
  "token",
  "argon2-hasher",
  "database",
  "redis-sessions",
  "reinhardt-sessions/full",
]

[dependencies]
reinhardt-core = { workspace = true, features = ["macros"] }
reinhardt-di = { workspace = true }
reinhardt-sessions = { workspace = true }
reinhardt-db = { workspace = true, features = ["orm"] }
reinhardt-throttling = { workspace = true }
reinhardt-types = { workspace = true, features = ["http"] }
reinhardt-exception = { workspace = true }
reinhardt-http = { workspace = true }
hyper = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
unicode-normalization = "0.1"
reqwest = { version = "0.12", features = ["json"] }
totp-lite = "2.0"
data-encoding = "2.6"
sqlx = { workspace = true, optional = true }
sea-query = { version = "1.0.0-rc.29", features = [
  "backend-postgres",
  "backend-mysql",
  "backend-sqlite",
  "sqlx-utils",
], optional = true }
reinhardt-orm = { workspace = true, optional = true }
reinhardt-migrations = { workspace = true, optional = true }
reinhardt-apps = { workspace = true, optional = true }
ctor = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
rstest = "0.26.1"
proptest = { workspace = true }
reinhardt-test = { workspace = true, features = ["testcontainers", "property-based"] }
trybuild = { workspace = true }
serial_test = "3.2"
