[package]
name = "reinhardt-auth"
version = "0.1.0-alpha.17"
description = "Authentication and authorization system"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["params"]

# Parameter extraction support for CurrentUser DI
params = ["reinhardt-di/params"]

# Fine-grained authentication features
jwt = []
sessions = []
oauth = []
token = []
argon2-hasher = []
social = ["p256"]

# Database and session storage (ORM model support)
database = ["ctor", "reinhardt-apps", "reinhardt-query", "sqlx"]
redis-sessions = ["redis"]

# Rate limiting permission
rate-limit = ["reinhardt-throttling"]

# Aggregate all auth features
auth-full = [
  "params",
  "jwt",
  "sessions",
  "oauth",
  "token",
  "argon2-hasher",
  "database",
  "redis-sessions",
]
file = ["fs2"]
cookie = ["aes-gcm"]
middleware = ["bytes"]
messagepack = ["dep:rmp-serde"]
cbor = ["dep:ciborium"]
bincode = ["dep:bincode"]
compression-zstd = ["dep:zstd"]
compression-gzip = ["dep:flate2"]
compression-brotli = ["dep:brotli"]
compression = ["compression-zstd", "compression-gzip", "compression-brotli"]
analytics-prometheus = ["dep:prometheus"]
analytics = ["analytics-prometheus"]
replication = []
tenant = []
full = [
	"database", "file", "cookie", "jwt", "middleware",
	"messagepack", "cbor", "bincode", "compression",
	"analytics", "replication", "tenant",
]

[dependencies]
reinhardt-core = { workspace = true, features = ["exception", "macros", "types"] }
reinhardt-di = { workspace = true }
reinhardt-db = { workspace = true, features = ["migrations", "orm"] }
reinhardt-http = { workspace = true }
hyper = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
p256 = { version = "0.13", optional = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"]}
base64 = "0.22"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
subtle = { workspace = true }
unicode-normalization = "0.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
totp-lite = "2.0"
data-encoding = "2.6"
sqlx = { workspace = true, optional = true, features = ["any", "runtime-tokio", "sqlite"]}
reinhardt-query = { workspace = true, optional = true }
reinhardt-apps = { workspace = true, optional = true }
ctor = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
reinhardt-utils = { workspace = true, features = ["cache"] }
reinhardt-throttling = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fs2 = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
bytes = { workspace = true, optional = true }
rmp-serde = { version = "1.1", optional = true }
ciborium = { version = "0.2", optional = true }
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
zstd = { version = "0.13", optional = true }
flate2 = { version = "1.0", optional = true }
brotli = { version = "8.0.2", optional = true }
prometheus = { version = "0.14.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
rstest = "0.26.1"
proptest = { workspace = true }
trybuild = { workspace = true }
serial_test = "3.2"
sqlx = { workspace = true, features = ["any", "sqlite", "runtime-tokio"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tempfile = { workspace = true }
filetime = "0.2"
reinhardt-query = { workspace = true }
reinhardt-db = {workspace = true, features = ["orm"]}
