[package]
name = "reinhardt-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Django-style management command framework for Reinhardt"

[dependencies]
reinhardt-apps = { workspace = true }
reinhardt-mail = { workspace = true }
reinhardt-settings = { workspace = true }
reinhardt-static = { workspace = true }
reinhardt-utils-core = { workspace = true }
reinhardt-routers = { workspace = true, optional = true }
reinhardt-migrations = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"
dialoguer = "0.12.0"
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
askama = "0.14.0"
walkdir = "2.5"
rand = { workspace = true }
regex = { workspace = true }
rust-embed = "8.5"
glob = "0.3"
notify = { version = "6.0", optional = true }

# TLS/HTTPS support
rustls = "0.23"
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
rustls-pemfile = "2.0"
rcgen = "0.13"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.13"
regex = { workspace = true }
reinhardt-i18n = { workspace = true }
serial_test = { workspace = true }

[features]
default = []
migrations = ["dep:reinhardt-migrations"]
routers = ["dep:reinhardt-routers"]
server = ["dep:reinhardt-server", "routers"]
autoreload = ["dep:notify", "server"]
