[package]
name = "reinhardt-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Django-style management command framework for Reinhardt"

[dependencies]
reinhardt-mail = { workspace = true }
reinhardt-static = { workspace = true }
reinhardt-utils-core = { workspace = true }
reinhardt-conf = { workspace = true }
reinhardt-urls = { workspace = true, features = ["routers"], optional = true }
reinhardt-db = { workspace = true, features = ["migrations", "backends-settings"], optional = true }
sqlx = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"
dialoguer = "0.12.0"
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5"
rand = { workspace = true }
regex = { workspace = true }
rust-embed = "8.5"
glob = "0.3"
notify = { version = "8.2.0", optional = true }
rustyline = { version = "17.0.2", optional = true }
rhai = { version = "1.20", optional = true }
pyo3 = { version = "0.27", optional = true, features = ["auto-initialize"] }

# AST dependencies for robust code generation
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"

# TLS/HTTPS support
rustls = "0.23"
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
rustls-pemfile = "2.0"
rcgen = "0.14.5"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.13"
regex = { workspace = true }
reinhardt-i18n = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }

[features]
default = ["server"]
migrations = ["dep:reinhardt-db"]
routers = ["dep:reinhardt-urls"]
server = ["dep:reinhardt-server", "routers"]
autoreload = ["dep:notify", "server"]
cargo-watch-reload = ["server"]
watch = ["cargo-watch-reload"]                      # Convenient alias
shell = ["dep:rustyline"]
shell-rhai = ["shell", "dep:rhai"]
shell-pyo3 = ["shell", "dep:pyo3"]
reinhardt-db = ["dep:reinhardt-db"]
mongodb-backend = ["reinhardt-db?/mongodb-backend"]
postgres = ["reinhardt-db?/postgres"]
sqlite = ["reinhardt-db?/sqlite", "dep:sqlx", "sqlx/sqlite"]
mysql = ["reinhardt-db?/mysql"]
full = [
  "migrations",
  "routers",
  "server",
  "autoreload",
  "cargo-watch-reload",
  "shell",
  "shell-rhai",
  "shell-pyo3",
  "reinhardt-db",
  "mongodb-backend",
  "postgres",
  "sqlite",
  "mysql",
]
