[package]
name = "reinhardt-commands"
version = "0.1.0-alpha.21"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Django-style management command framework for Reinhardt"

[dependencies]
reinhardt-apps = { workspace = true }
reinhardt-mail = { workspace = true }
reinhardt-conf = { workspace = true }
reinhardt-dentdelion = { workspace = true, features = ["cli"], optional = true }
reinhardt-urls = { workspace = true, features = ["routers", "database"], optional = true }
reinhardt-db = { workspace = true, features = ["migrations", "backends-settings", "orm", "settings"], optional = true }
reinhardt-test = { path = "../reinhardt-test", version = "0.1.0-alpha.20", optional = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-http = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
reinhardt-middleware = { workspace = true, optional = true }
reinhardt-pages = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
colored = "3.0.0"
dialoguer = "0.12.0"
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5"
rand = { workspace = true }
regex = { workspace = true }
sha2 = "0.10"
rust-embed = "8.5"
glob = "0.3"
inventory = "0.3"
notify = { version = "8.2.0", optional = true }
rustyline = { version = "17.0.2", optional = true }
rhai = { version = "1.20", optional = true }

# AST dependencies for robust code generation
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"

# TLS/HTTPS support
rustls = "0.23"
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
rustls-pemfile = "2.0"
rcgen = "0.14.5"
reinhardt-utils = {workspace = true, features = ["utils-core", "staticfiles"]}
reinhardt-rest = {workspace = true, features = ["openapi"], optional = true}
reinhardt-openapi = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.13"
regex = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["server", "autoreload"]
migrations = ["reinhardt-db"]
routers = ["dep:reinhardt-urls"]
di = ["dep:reinhardt-di"]
openapi = ["dep:reinhardt-rest", "dep:reinhardt-http"]
openapi-router = ["dep:reinhardt-openapi", "openapi"]
server = ["dep:reinhardt-server", "dep:reinhardt-middleware", "routers", "di"]
autoreload = ["dep:notify", "server"]
shell = ["dep:rustyline"]
shell-rhai = ["shell", "dep:rhai"]
reinhardt-db = ["dep:reinhardt-db"]
postgres = ["reinhardt-db?/postgres", "dep:sqlx", "sqlx/postgres"]
sqlite = ["reinhardt-db?/sqlite", "dep:sqlx", "sqlx/sqlite"]
mysql = ["reinhardt-db?/mysql", "dep:sqlx", "sqlx/mysql"]
testcontainers = ["dep:reinhardt-test", "reinhardt-test?/testcontainers"]
plugins = ["dep:reinhardt-dentdelion"]
full = [
  "migrations",
  "routers",
  "server",
  "autoreload",
  "shell",
  "shell-rhai",
  "reinhardt-db",
  "di",
  "openapi",
  "postgres",
  "sqlite",
  "mysql",
  "testcontainers",
  "plugins",
]
