[package]
name = "reinhardt-contrib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# CLI dependencies for bin/reinhardt-admin
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { workspace = true, optional = true }

# Re-export internal crates as optional dependencies
reinhardt-auth = { version = "0.1.0", path = "crates/auth", optional = true }
reinhardt-contenttypes = { version = "0.1.0", path = "crates/contenttypes", optional = true }
reinhardt-sessions = { version = "0.1.0", path = "crates/sessions", optional = true }
reinhardt-messages = { version = "0.1.0", path = "crates/messages", optional = true }
reinhardt-static = { version = "0.1.0", path = "crates/static", optional = true }
reinhardt-mail = { version = "0.1.0", path = "crates/mail", optional = true }
reinhardt-graphql = { version = "0.1.0", path = "crates/graphql", optional = true }
reinhardt-websockets = { version = "0.1.0", path = "crates/websockets", optional = true }
reinhardt-i18n = { version = "0.1.0", path = "crates/i18n", optional = true }
reinhardt-utils = { workspace = true }
chrono = { workspace = true }

[features]
default = []

# CLI feature for reinhardt-admin binary
cli = ["dep:clap", "dep:tokio"]

# Individual feature flags for each contrib module
auth = ["dep:reinhardt-auth"]
contenttypes = ["dep:reinhardt-contenttypes"]
sessions = ["dep:reinhardt-sessions"]
messages = ["dep:reinhardt-messages"]
static = ["dep:reinhardt-static"]
mail = ["dep:reinhardt-mail"]
graphql = ["dep:reinhardt-graphql"]
websockets = ["dep:reinhardt-websockets"]
i18n = ["dep:reinhardt-i18n"]

# Convenience feature to enable all contrib modules
full = [
  "auth",
  "contenttypes",
  "sessions",
  "messages",
  "static",
  "mail",
  "graphql",
  "websockets",
  "i18n",
]

[[bin]]
name = "reinhardt-admin"
required-features = ["cli"]
