[package]
name = "reinhardt-contrib"
version.workspace = true
description = "Django-style contrib applications aggregator"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

# Re-export internal crates as optional dependencies
reinhardt-auth = { version = "0.1.0-alpha.1", path = "crates/auth", optional = true }
reinhardt-contenttypes = { version = "0.1.0-alpha.1", path = "crates/contenttypes", optional = true }
reinhardt-sessions = { version = "0.1.0-alpha.1", path = "crates/sessions", optional = true }
reinhardt-messages = { version = "0.1.0-alpha.1", path = "crates/messages", optional = true }
reinhardt-static = { version = "0.1.0-alpha.1", path = "crates/static", optional = true }
reinhardt-mail = { version = "0.1.0-alpha.1", path = "crates/mail", optional = true }
reinhardt-graphql = { version = "0.1.0-alpha.1", path = "crates/graphql", optional = true }
reinhardt-websockets = { version = "0.1.0-alpha.1", path = "crates/websockets", optional = true }
reinhardt-i18n = { version = "0.1.0-alpha.1", path = "crates/i18n", optional = true }
reinhardt-admin = { version = "0.1.0-alpha.1", path = "crates/admin", optional = true }
reinhardt-utils = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
regex = { workspace = true }

[features]
default = []

# Individual feature flags for each contrib module
auth = ["dep:reinhardt-auth"]
contenttypes = ["dep:reinhardt-contenttypes"]
sessions = ["dep:reinhardt-sessions"]
messages = ["dep:reinhardt-messages"]
static = ["dep:reinhardt-static"]
mail = ["dep:reinhardt-mail"]
graphql = ["dep:reinhardt-graphql"]
websockets = ["dep:reinhardt-websockets"]
i18n = ["dep:reinhardt-i18n"]
admin = ["dep:reinhardt-admin"]

# Fine-grained authentication features (pass-through from reinhardt-auth)
auth-jwt = ["auth", "reinhardt-auth/jwt"]
auth-session = ["auth", "reinhardt-auth/session"]
auth-oauth = ["auth", "reinhardt-auth/oauth"]
auth-token = ["auth", "reinhardt-auth/token"]
argon2-hasher = ["auth", "reinhardt-auth/argon2-hasher"]

# Convenience feature to enable all contrib modules
full = [
  "auth",
  "contenttypes",
  "sessions",
  "messages",
  "static",
  "mail",
  "graphql",
  "websockets",
  "i18n",
  "admin",
]
