[package]
name = "reinhardt-core"
version = "0.1.0-rc.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core components for Reinhardt framework"
keywords = ["web", "framework", "django", "rust", "async"]
categories = ["web-programming", "web-programming::http-server"]
readme = "README.md"
documentation = "https://docs.rs/reinhardt-core"

[dependencies]
# Re-export all internal crates
reinhardt-macros = { workspace = true, optional = true }

# External dependencies for re-export
serde = { workspace = true, features = ["derive"], optional = true}
serde_json = { workspace = true }
async-trait = { workspace = true }
inventory = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_urlencoded = { workspace = true }
http = { workspace = true }
validator = "0.20"
base64 = "0.22"
percent-encoding = "2.3"
url = "2.5"
bytes = "1.0"
multer = "3.0"
mime = "0.3"
futures-util = "0.3"
urlencoding = "2.1"
quick-xml = { version = "0.38.3", optional = true }
serde_yaml = { workspace = true, optional = true }
flate2 = { workspace = true }
brotli = { workspace = true }
rmp-serde = { workspace = true }
prost = { workspace = true }
serial_test = { workspace = true, optional = true }
aquamarine = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.9"
ipnet = "2.10"
regex = "1.11"
chrono = { workspace = true }
once_cell = "1.20"
typed-arena = "2.0"
serde-xml-rs = { version = "0.8.1", optional = true }
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
fluent-bundle = { version = "0.15", optional = true }
image = "0.25"

# Server-side dependencies (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time"] }
hyper = { workspace = true }
jsonschema = { version = "0.26", optional = true }
rayon = { version = "1.10", optional = true }
unic-langid = { version = "0.9", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Event"] }
wasm-bindgen = "0.2"

[features]
default = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "serializers",
]

# Module features (modules are always compiled, features for backwards compatibility)
types = []
exception = []
signals = ["serde"]
security = []
validators = []
serializers = ["serde"]
messages = []
negotiation = []
parsers = []
pagination = []
reactive = []

# Page types feature
page = ["types"]

# External dependency features
macros = ["dep:reinhardt-macros"]

# Aggregate all core features
core-full = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "serializers",
  "messages",
  "negotiation",
  "parsers",
  "pagination",
  "reactive",
  "full",
  "reinhardt-macros?/full",
]

# Full feature with all optional functionality
full = ["i18n", "json", "jsonschema", "page", "parallel", "serde", "std", "xml", "yaml"]
std = []
json = []
xml = ["dep:quick-xml", "dep:serde-xml-rs"]
yaml = ["dep:serde_yaml"]
serde = ["dep:serde"]
jsonschema = ["dep:jsonschema"]
parallel = ["dep:rayon"]
i18n = ["dep:fluent-bundle", "dep:unic-langid"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt", "test-util"] }
bytes = "1.0"
hyper = "1.0"
tokio-test = "0.4"
serial_test = { workspace = true }
rstest = { workspace = true }
